name:           crypto-history
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/hexresearch/crypto-history#readme>
homepage:       https://github.com/hexresearch/crypto-history#readme
bug-reports:    https://github.com/hexresearch/crypto-history/issues
author:         HEX research
maintainer:     anton.kholomiov@gmail.com
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/hexresearch/crypto-history

library
  exposed-modules:
      Crypto.History
      Crypto.History.Client
      Crypto.History.Cross
      Crypto.History.Types
      Crypto.History.IO
  other-modules:
      Crypto.History.Parse
      Paths_crypto_history
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , cassava
    , html-parse
    , http-client
    , http-client-tls
    , scientific
    , network
    , safe
    , servant
    , servant-blaze
    , servant-client
    , tagsoup
    , text
    , time
    , vector
    , unordered-containers
  default-language: Haskell2010
  default-extensions:
    DataKinds
    FlexibleInstances
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    TypeOperators
    TypeSynonymInstances


test-suite crypto-history-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_crypto_history
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , crypto-history
  default-language: Haskell2010

